--- a/css/styles.css
+++ b/css/styles.css
@@ -66,3 +66,9 @@ details { text-align: center; }
 	clear: both;
 	display: table;
 }
+.intro {
+	font: Trade Gothic
+	font-family: Sans-Serif
+	font-weight: bold
+	color: #11B2F6
+}
