--- a/css/styles.css
+++ b/css/styles.css
@@ -78,5 +78,5 @@ details { text-align: center; }
 	font-weight: bold;
 	font-size: 24px;
 	color: #F9BA1c;
-	text-align: center
+	text-align: center;
 }
