--- a/css/styles.css
+++ b/css/styles.css
@@ -78,13 +78,13 @@ details { text-align: center; }
 }
 #intro {
 	font-family: "Trade Gothic Bold No. 2", Sans-Serif;
-	font-size: 18px;
-	color: #11B2F6;
+	font-size: 24px;
+	color: #02D6EC;
 	text-align: center;
 }
 #history {
 	font-family: "News Gothic";
-	font-size: 24px;
-	color: #F9BA1c;
+	font-size: 36px;
+	color: #F1B40D;
 	text-align: center;
 }
