--- a/css/styles.css
+++ b/css/styles.css
@@ -86,5 +86,12 @@ details { text-align: center; }
 	font-family: "News Gothic";
 	font-size: 36px;
 	color: #F1B40D;
-	text-align: center;
+	text-align: justify;
+	transform: perspective(300px) rotateX(25deg);
+	transform-origin: 50% 100%;
+	overflow: hidden;
+}
+#history::after {
+	position: absolute;
+	content: ' ';
 }
